<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab3BTextView1"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab3BTextView2"
        android:layout_below="@id/textView4"/>

    <EditText
        android:id="@+id/nameedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/lab3BEditText1"
        android:layout_below="@id/textView6"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab3BTextView3"
        android:layout_below="@id/nameedit"/>

    <EditText
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/lab3BEditText2"
        android:layout_below="@id/textView7"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab3BTextView4"
        android:layout_below="@id/email2"/>

    <ImageButton
        android:id="@+id/imageclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab3BTextView5"
        android:layout_below="@id/imageclick"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab4Button1"
        android:layout_below="@+id/textView9"/>


</RelativeLayout>

