<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:text="@string/ButtonText" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="210dp"
        android:layout_height="71dp"
        app:srcCompat="@drawable/flag"
        android:layout_below="@id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
        android:layout_below="@id/imageButton2"
        />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:text="@string/switchWidget" />
    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch2"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/hint"/>

</RelativeLayout>
