<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/ButtonText" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="206dp"
        android:layout_height="85dp"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:text="@string/checkBox" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switchWidget" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:hint="@string/hint"
        android:inputType="textPersonName|textCapWords"
        android:layout_columnSpan="2"/>
</GridLayout>
